fix: add nth child tag li on mobiles version

--- a/wp-content/themes/mebli/assets/scss/_about-store.scss
+++ b/wp-content/themes/mebli/assets/scss/_about-store.scss
@@ -212,6 +212,9 @@
               &.hidden {
                 display: block;
               }
+              &:nth-child(3) {
+                margin-bottom: 20px;
+              }
             }
           }
         }
